--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,21 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+test {
+    useJUnitPlatform()
+    dependsOn 'cleanTest'
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
 
-    testCompile(
-            'org.junit.jupiter:junit-jupiter-params:5.1.0'
-    )
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.1'
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.1.0')
 
     compileOnly "org.projectlombok:lombok:1.16.16"
+    annotationProcessor('org.projectlombok:lombok:1.18.0')
     compile 'org.apache.commons:commons-csv:1.5'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
 }
